feat(main-server): global update main-server
