# main-server/pkg/constants/route/user_constants.go
@@ -1,0 +1,19 @@
+package route
+
+const (
+	USER_MAIN_ROUTE = "/user"
+)
+
+const (
+	// Create article
+	USER_CREATE_ARTICLE_ROUTE = "/article/create"
+
+	// Get article
+	USER_GET_ARTICLE_ROUTE = "/article/get"
+
+	// Get articles
+	USER_GET_ARTICLES_ROUTE = "/article/get/all"
+
+	// Delete article
+	USER_DELETE_ARTICLE_ROUTE = "/article/delete"
+)
