# main-server/pkg/handler/handler.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
+	"github.com/spf13/viper"
 
 	_ "main-server/docs"
 
@@ -28,14 +29,17 @@ func NewHandler(services *service.Service) *Handler {
 func (h *Handler) InitRoutes() *gin.Engine {
 	router := gin.New()
 
+	router.MaxMultipartMemory = 50 << 20 // 50 MiB
+	router.Static("/public", "./public")
+
 	router.LoadHTMLGlob("pkg/templates/*")
 
 	// Настройка CORS-политики
 	router.Use(cors.New(cors.Config{
-		AllowAllOrigins: true, // для тестов
-		// AllowOrigins:     []string{"http://localhost:3000"},
+		//AllowAllOrigins: true, // для тестов
+		AllowOrigins:     []string{viper.GetString("client_url")},
 		AllowMethods:     []string{"POST", "GET"},
-		AllowHeaders:     []string{"Origin", "Content-type"},
+		AllowHeaders:     []string{"Origin", "Content-type", "Authorization"},
 		AllowCredentials: true,
 	}))
 
@@ -51,6 +55,14 @@ func (h *Handler) InitRoutes() *gin.Engine {
 		// With middlewares (for get data from access token)
 		auth.POST(route.AUTH_REFRESH_TOKEN_ROUTE, h.userIdentityLogout, h.refresh)
 		auth.POST(route.AUTH_LOGOUT_ROUTE, h.userIdentity, h.logout)
+	}
+
+	user := router.Group(route.USER_MAIN_ROUTE, h.userIdentity)
+	{
+		user.POST(route.USER_CREATE_ARTICLE_ROUTE, h.createArticle)
+		user.POST(route.USER_DELETE_ARTICLE_ROUTE, h.deleteArticle)
+		user.POST(route.USER_GET_ARTICLE_ROUTE, h.getArticle)
+		user.POST(route.USER_GET_ARTICLES_ROUTE, h.getArticles)
 	}
 
 	/*api := router.Group("/api", h.userIdentity)
